{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 246,
  "lineage": "2eff07b7-3b4f-2cff-272a-c95d625e0a7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd934b7121eabedb",
            "arn": "arn:aws:ec2:eu-central-1:621362929357:elastic-ip/eipalloc-0bd934b7121eabedb",
            "domain": "vpc",
            "id": "eipalloc-0bd934b7121eabedb",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-123-143-132.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.143.132",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:internet-gateway/igw-095a87269e4652759",
            "id": "igw-095a87269e4652759",
            "owner_id": "621362929357",
            "tags": {
              "Name": "3tier-igw-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-igw-dev-minimal"
            },
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:621362929357:loadbalancer/app/3tier-alb-dev-minimal/298d8386bfeff4d0",
            "arn_suffix": "app/3tier-alb-dev-minimal/298d8386bfeff4d0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "3tier-alb-dev-minimal-1577766342.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621362929357:loadbalancer/app/3tier-alb-dev-minimal/298d8386bfeff4d0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "3tier-alb-dev-minimal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-053926cf42ee908c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01815ebbd652cd80c"
              },
              {
                "subnet_id": "subnet-0c294d3200347110b"
              }
            ],
            "subnets": [
              "subnet-01815ebbd652cd80c",
              "subnet-0c294d3200347110b"
            ],
            "tags": {
              "Name": "3tier-alb-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-alb-dev-minimal"
            },
            "vpc_id": "vpc-0be784bdf98a0d4e1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:621362929357:listener/app/3tier-alb-dev-minimal/298d8386bfeff4d0/cbb4caf9af943a15",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:621362929357:targetgroup/app-tg-dev-minimal/91147bf84c52f22c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621362929357:listener/app/3tier-alb-dev-minimal/298d8386bfeff4d0/cbb4caf9af943a15",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:621362929357:loadbalancer/app/3tier-alb-dev-minimal/298d8386bfeff4d0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:621362929357:targetgroup/app-tg-dev-minimal/91147bf84c52f22c",
            "arn_suffix": "targetgroup/app-tg-dev-minimal/91147bf84c52f22c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:621362929357:targetgroup/app-tg-dev-minimal/91147bf84c52f22c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg-dev-minimal",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-tg-dev-minimal"
            },
            "tags_all": {
              "Name": "app-tg-dev-minimal"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd934b7121eabedb",
            "association_id": "eipassoc-08b3e924266dc27cb",
            "connectivity_type": "public",
            "id": "nat-04bea8f933758fe08",
            "network_interface_id": "eni-055c00565cbf257d4",
            "private_ip": "10.0.1.59",
            "public_ip": "3.123.143.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01815ebbd652cd80c",
            "tags": {
              "Name": "3tier-natgw-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-natgw-dev-minimal"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "db-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0230ebcc7721e8be11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04bea8f933758fe08",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0230ebcc7721e8be1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_route_table.db",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0362b6ce0616982b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04bea8f933758fe08",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0362b6ce0616982b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-095a87269e4652759",
            "id": "r-rtb-0868a145c6b1745721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0868a145c6b174572",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:route-table/rtb-0230ebcc7721e8be1",
            "id": "rtb-0230ebcc7721e8be1",
            "owner_id": "621362929357",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "3tier-db-rt-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-db-rt-dev-minimal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:route-table/rtb-0362b6ce0616982b2",
            "id": "rtb-0362b6ce0616982b2",
            "owner_id": "621362929357",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "3tier-private-rt-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-private-rt-dev-minimal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:route-table/rtb-0868a145c6b174572",
            "id": "rtb-0868a145c6b174572",
            "owner_id": "621362929357",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "3tier-public-rt-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-public-rt-dev-minimal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edbe1c34b9993713",
            "route_table_id": "rtb-0230ebcc7721e8be1",
            "subnet_id": "subnet-06e0a89e35d1823fa"
          },
          "dependencies": [
            "aws_route_table.db",
            "aws_subnet.db_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b73e0d5efbf6701",
            "route_table_id": "rtb-0230ebcc7721e8be1",
            "subnet_id": "subnet-0fae9d3a7222a4006"
          },
          "dependencies": [
            "aws_route_table.db",
            "aws_subnet.db_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008572b383b4eef76",
            "route_table_id": "rtb-0362b6ce0616982b2",
            "subnet_id": "subnet-02161a8f0872e1360"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eec433de7a23a60",
            "route_table_id": "rtb-0362b6ce0616982b2",
            "subnet_id": "subnet-0d5e5a192b2bfb3a9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff9b5c5741b6f0ac",
            "route_table_id": "rtb-0868a145c6b174572",
            "subnet_id": "subnet-01815ebbd652cd80c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039c2583ef2bd92d3",
            "route_table_id": "rtb-0868a145c6b174572",
            "subnet_id": "subnet-0c294d3200347110b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:security-group/sg-053926cf42ee908c6",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053926cf42ee908c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-dev-minimal",
            "name_prefix": "",
            "owner_id": "621362929357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-dev-minimal"
            },
            "tags_all": {
              "Name": "alb-sg-dev-minimal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:security-group/sg-00c232ea92eedacd2",
            "description": "App Tier Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c232ea92eedacd2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053926cf42ee908c6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg-dev-minimal",
            "name_prefix": "",
            "owner_id": "621362929357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg-dev-minimal"
            },
            "tags_all": {
              "Name": "app-sg-dev-minimal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:security-group/sg-0e5c4edc4ab2f796a",
            "description": "DB tier security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5c4edc4ab2f796a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from App tier",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c232ea92eedacd2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg-dev-minimal",
            "name_prefix": "",
            "owner_id": "621362929357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg-dev-minimal"
            },
            "tags_all": {
              "Name": "db-sg-dev-minimal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:subnet/subnet-06e0a89e35d1823fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e0a89e35d1823fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621362929357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3tier-db-subnet-0-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-db-subnet-0-dev-minimal"
            },
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:subnet/subnet-0fae9d3a7222a4006",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fae9d3a7222a4006",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621362929357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3tier-db-subnet-1-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-db-subnet-1-dev-minimal"
            },
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:subnet/subnet-02161a8f0872e1360",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02161a8f0872e1360",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621362929357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3tier-private-subnet-0-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-private-subnet-0-dev-minimal"
            },
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:subnet/subnet-0d5e5a192b2bfb3a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5e5a192b2bfb3a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621362929357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3tier-private-subnet-1-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-private-subnet-1-dev-minimal"
            },
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:subnet/subnet-01815ebbd652cd80c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01815ebbd652cd80c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "621362929357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3tier-public-subnet-0-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-public-subnet-0-dev-minimal"
            },
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:subnet/subnet-0c294d3200347110b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c294d3200347110b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "621362929357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3tier-public-subnet-1-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-public-subnet-1-dev-minimal"
            },
            "vpc_id": "vpc-0be784bdf98a0d4e1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:621362929357:vpc/vpc-0be784bdf98a0d4e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af6fc1108889e16a",
            "default_route_table_id": "rtb-0902621c5dd788cdf",
            "default_security_group_id": "sg-0f26c46f8dfa90c8d",
            "dhcp_options_id": "dopt-6b628301",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be784bdf98a0d4e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0902621c5dd788cdf",
            "owner_id": "621362929357",
            "tags": {
              "Name": "3tier-vpc-dev-minimal"
            },
            "tags_all": {
              "Name": "3tier-vpc-dev-minimal"
            }
          }
        }
      ]
    }
  ]
}